# libltc_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/: BiphaseMarkCodeDecoder.cpp  BiphaseMarkCodeDecoder.hpp  LTCDecoder.cpp  LTCDecoder.hpp  LTCFrame.cpp  LTCFrame.hpp  Test.cpp  Test.hpp
Tests/libltc_cpp_test/: .gitignore
Tests/libltc_cpp_test/libltc_cpp_test/: main.cpp
Tests/libltc_cpp_test/libltc_cpp_test.xcodeproj/: project.pbxproj
include/: BiphaseMarkCodeDecoder.hpp  LTCFrame.hpp
src/: LTCDecoder.cpp
test/: CMakeLists.txt  test_test.cpp
test/include/: TestState.h
test/src/: DecoderTests.cpp  main.cpp
test/test_files/decoder/decodes_single_valid_frame/: frames.csv  single_valid_frame_1.pcm  single_valid_frame_2.pcm  single_valid_frame_3.pcm  single_valid_frame_4.pcm
test/test_files/decoder/fail/: broken_sync_word_1  broken_sync_word_2  broken_sync_word_3  broken_sync_word_4  impossible_time_1  impossible_time_2  impossible_time_3  impossible_time_4  test_data.csv
test/test_files/decoder/pass/: libltc_multi_frame_1  libltc_multi_frame_10  libltc_multi_frame_2  libltc_multi_frame_3  libltc_multi_frame_4  libltc_multi_frame_5  libltc_multi_frame_6  libltc_multi_frame_7  libltc_multi_frame_8  libltc_multi_frame_9  libltc_single_frame_1  libltc_single_frame_10  libltc_single_frame_2  libltc_single_frame_3  libltc_single_frame_4  libltc_single_frame_5  libltc_single_frame_6  libltc_single_frame_7  libltc_single_frame_8  libltc_single_frame_9  test_data.csv
xcode/: .gitignore
xcode/libltc_cpp.xcodeproj/: project.pbxproj
(+16 files in other folders)
